--- a/mystery_shoping.html
+++ b/mystery_shoping.html
@@ -138,9 +138,12 @@
             <p>
 
 
-                En ce qui concerne l'ingénierie du développement durable, nous proposons des  solutions durables et respectueuses de  l'environnement pour promouvoir le développement économique et social. 
 
-                Nous aidons nos clients à mettre en place des projets et des initiatives qui contribuent à la préservation des ressources naturelles et à la lutte contre le changement climatique.
+
+                La Mystery Shoping est un service unique que nous proposons pour évaluer la qualité des services offerts par nos clients. Nous formons des équipes 
+
+                d'évaluateurs anonymes pour évaluer l'expérience client et fournir des recommandations pour améliorer la qualité des services.
+                
                 
               </p>
           </div>
