--- a/calender.html
+++ b/calender.html
@@ -106,12 +106,12 @@
     <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
       <div class="container position-relative">
-        <h1>Ingénieurie de la Santé</h1>
+        <h1>Développement Durable</h1>
         <!-- <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p> -->
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Ingénieurie de la Santé</li>
+            <li class="current">Développement Durable</li>
           </ol>
         </nav>
       </div>
@@ -134,35 +134,13 @@
               <a href="#">Marketing</a>
             </div> -->
 
-            <h4>Ingénieurie de la Santé</h4>
-            <p>
-
-              Dans le domaine de l'ingénierie de la santé, nous mettons en œuvre des solutions innovantes pour améliorer les systèmes de santé dans les pays en développement .Nous travaillons en étroite collaboration
-              
-              avec les autorités locales et les acteurs de la santé pour concevoir des programmes et des infrastructures adaptésaux besoins spécifiques de chaque communauté. 
-              </p>
+            <h4>Planifiez un rendez-vous</h4>
+           <!-- Google Calendar Appointment Scheduling begin -->
+<iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0JFAKKREpg1CWFUlMzgBEKF_Lh8x-DJcZI83e8-LavZqkrOaQ41k_chx6FRlQ4ihz0wccG-pcs?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+<!-- end Google Calendar Appointment Scheduling -->
           </div>
 
-          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <!-- <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
-            <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
-            </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-            </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p> -->
-
-            <div class="arrow" onclick="location.href='index.html#services';"></div>
-          </div>
+          
 
         </div>
 
