--- a/calender.html
+++ b/calender.html
@@ -106,12 +106,12 @@
     <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
       <div class="container position-relative">
-        <h1>Développement Durable</h1>
+        <h1>Book a call</h1>
         <!-- <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p> -->
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Développement Durable</li>
+            <li class="current">Book a call</li> 
           </ol>
         </nav>
       </div>
@@ -134,7 +134,7 @@
               <a href="#">Marketing</a>
             </div> -->
 
-            <h4>Planifiez un rendez-vous</h4>
+            <h4>Book a call with us</h4>
            <!-- Google Calendar Appointment Scheduling begin -->
 <iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0JFAKKREpg1CWFUlMzgBEKF_Lh8x-DJcZI83e8-LavZqkrOaQ41k_chx6FRlQ4ihz0wccG-pcs?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
 <!-- end Google Calendar Appointment Scheduling -->
