pharmex lab et panier

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <ul>
               <li class="dropdown"><a href="santé.html"><span>Ingénieurie de la Santé</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Matériels et équipements médicaux</a></li>
-                  <li><a href="#">Pharmex Lab</a></li>
+                  <li><a href="materiels.html">Matériels et équipements médicaux</a></li>
+                  <li><a href="pharmexlab.html">Pharmex Lab</a></li>
                   <li><a href="#">Analyse et modelisation de données de santé</a></li>
                   <li><a href="#">Conception et évaluation des systèmes de santé</a></li>
                   <li><a href="calender.html">Evaluation et certification des dispositifs médicaux</a></li>
