--- a/materiels.html
+++ b/materiels.html
@@ -220,7 +220,21 @@ button:hover{
 }
 
 
+@media (max-width: 768px) {
+            .header1, .container1 {
+                flex-direction: column;
+                align-items: center;
+            }
 
+            #root {
+                grid-template-columns: 1fr;
+            }
+
+            .sidebar {
+                margin-left: 0;
+                width: 100%;
+            }
+        }
 
 
 
