evaluateur client compte

--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
               </li>
 
 
-              <li class="dropdown"><a href="developpement_durable.html"><span>Formation</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="formation.html"><span>Formation</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="calender.html">Système de management de la qualité (SMQ)</a></li>
+                  <!-- <li><a href="calender.html">Système de management de la qualité (SMQ)</a></li>
                   <li><a href="calender.html">Validation des systèmes informatisés
                   </a></li>
-                  <li><a href="calender.html">Pharmacovigilance</a></li>
+                  <li><a href="calender.html">Pharmacovigilance</a></li> -->
                  
                 </ul>
               </li>
