--- a/Impacts.html
+++ b/Impacts.html
@@ -138,7 +138,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
       <div class="container position-relative">
-        <h1>Audit de genre</h1>
+        <h1>Évaluation des impacts environnementaux et sociaux </h1>
         <!-- <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p> -->
         <nav class="breadcrumbs">
           <ol>
@@ -158,10 +158,11 @@
 
           <div class="arrow" onclick="location.href='index.html#services';"></div>
 
-          <h2>Audit de genre</h2>
           <p>
+            Optimisez vos projets avec notre expertise en évaluation des impacts environnementaux et sociaux. 
+<b>BICOD Sarl</b>, reconnu pour sa rigueur et son professionnalisme, accompagne les entreprises, collectivités et promoteurs immobiliers dans l'analyse minutieuse de leurs projets. Grâce à une méthodologie éprouvée, nous identifions les impacts potentiels et proposons des solutions adaptées, garantissant conformité réglementaire et acceptabilité sociale. 
+En collaborant avec nous, vous bénéficiez d'une expertise pointue, d'une approche personnalisée et d'un engagement sur la durabilité, vous permettant d'anticiper les risques et d'améliorer votre image de marque. Faites le choix d’un avenir responsable avec notre accompagnement sur mesure.
 
-            L’audit de genre est une évaluation systématique et objective des politiques, programmes, pratiques et processus organisationnels afin d’identifier et de comprendre les différences et inégalités de genre qui peuvent exister. L’objectif d’un tel audit est de garantir que les politiques et les pratiques d’une organisation sont inclusives, équitables et sensibles au genre, et de promouvoir l’égalité de genre.
           </p>
           <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
