--- a/analyse.html
+++ b/analyse.html
@@ -138,7 +138,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
       <div class="container position-relative">
-        <h1>Audit de genre</h1>
+        <h1>Analyse et modelisation des données de santé</h1>
         <!-- <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p> -->
         <nav class="breadcrumbs">
           <ol>
@@ -158,10 +158,11 @@
 
           <div class="arrow" onclick="location.href='index.html#services';"></div>
 
-          <h2>Audit de genre</h2>
           <p>
+            <b>BICOD Sarl</b> se spécialise dans l’analyse et la modélisation des données de santé, offrant des solutions idéales pour les professionnels souhaitant implémenter une entreprise sanitaire, qu'il s'agisse d'une pharmacie, d'un centre de santé ou d'un hôpital. L’offre concerne également des ONG ou d’autres organismes qui souhaitent organiser des campagnes sanitaires. Grâce à une équipe d'ingénieurs et d'experts en santé, nous vous accompagnons dans l’optimisation de vos processus, l'amélioration de la qualité des soins et l'accroissement de l’efficacité opérationnelle.
+Notre approche rigoureuse et axée sur les données garantit des résultats fiables, adaptés aux enjeux complexes du secteur. 
+En choisissant de collaborer avec nous, vous optez pour un partenaire engagé dans l'excellence et l'innovation au service de votre projet. Ensemble, façonnons l’avenir des soins !
 
-            L’audit de genre est une évaluation systématique et objective des politiques, programmes, pratiques et processus organisationnels afin d’identifier et de comprendre les différences et inégalités de genre qui peuvent exister. L’objectif d’un tel audit est de garantir que les politiques et les pratiques d’une organisation sont inclusives, équitables et sensibles au genre, et de promouvoir l’égalité de genre.
           </p>
           <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
