--- a/conception.html
+++ b/conception.html
@@ -138,7 +138,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
       <div class="container position-relative">
-        <h1>Audit de genre</h1>
+        <h1>Conception et évaluation des systèmes de santé </h1>
         <!-- <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p> -->
         <nav class="breadcrumbs">
           <ol>
@@ -158,10 +158,11 @@
 
           <div class="arrow" onclick="location.href='index.html#services';"></div>
 
-          <h2>Audit de genre</h2>
           <p>
+            <b>BICOD Sarl</b> est spécialisé dans la conception et l'évaluation des systèmes de santé, en fournissant des solutions sur mesure pour les établissements de santé, qu'ils soient publics ou privés. Nous accompagnons également les ONG et autres acteurs du secteur dans l'optimisation de leurs interventions et la mise en place de programmes de santé efficaces.
+Les experts en santé publique, en économétrie et en gestion des systèmes de santé, avec qui nous collaborons vous aident à développer des stratégies adaptées et à évaluer l'impact de vos initiatives. Notre approche analytique et fondée sur des données probantes garantit des recommandations pertinentes, répondant aux enjeux spécifiques de votre environnement. 
+En collaborant avec nous, vous choisissez un partenaire dévoué à la qualité et à l'innovation dans le domaine de la santé. Ensemble, construisons des systèmes de santé robustes et durables !
 
-            L’audit de genre est une évaluation systématique et objective des politiques, programmes, pratiques et processus organisationnels afin d’identifier et de comprendre les différences et inégalités de genre qui peuvent exister. L’objectif d’un tel audit est de garantir que les politiques et les pratiques d’une organisation sont inclusives, équitables et sensibles au genre, et de promouvoir l’égalité de genre.
           </p>
           <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
