--- a/evaluation.html
+++ b/evaluation.html
@@ -138,7 +138,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
       <div class="container position-relative">
-        <h1>Audit de genre</h1>
+        <h1>Évaluation et certification des dispositifs médicaux </h1>
         <!-- <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p> -->
         <nav class="breadcrumbs">
           <ol>
@@ -158,10 +158,11 @@
 
           <div class="arrow" onclick="location.href='index.html#services';"></div>
 
-          <h2>Audit de genre</h2>
           <p>
+            Notre cabinet se spécialise dans l'évaluation et la certification des dispositifs médicaux, offrant des solutions fiables aux fabricants et aux distributeurs souhaitant garantir la conformité et la sécurité de leurs produits. Nous travaillons également avec des organismes de réglementation et des professionnels de la santé afin d'assurer une mise sur le marché réussie.
+Avec une équipe d'experts en réglementation, en qualité et en ingénierie biomédicale, nous vous accompagnons tout au long du processus d'évaluation, de la conception initiale à la certification finale. Notre approche rigoureuse et fondée sur des standards internationaux garantit que vos dispositifs médicaux répondent aux exigences de sécurité et d'efficacité. 
+En choisissant de collaborer avec nous, vous optez pour un partenaire engagé dans l'excellence et l'innovation. Ensemble, assurons la sécurité et l'efficacité de vos produits pour un impact positif sur la santé des patients.
 
-            L’audit de genre est une évaluation systématique et objective des politiques, programmes, pratiques et processus organisationnels afin d’identifier et de comprendre les différences et inégalités de genre qui peuvent exister. L’objectif d’un tel audit est de garantir que les politiques et les pratiques d’une organisation sont inclusives, équitables et sensibles au genre, et de promouvoir l’égalité de genre.
           </p>
           <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
