--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
                 <ul>
                   <li><a href="materiels.html">Matériels et équipements médicaux</a></li>
                   <li><a href="pharmexlab.html">Pharmex Lab</a></li>
-                  <li><a href="calender.html">Analyse et modelisation de données de santé</a></li>
-                  <li><a href="calender.html">Conception et évaluation des systèmes de santé</a></li>
-                  <li><a href="calender.html">Evaluation et certification des dispositifs médicaux</a></li>
+                  <li><a href="analyse.html">Analyse et modelisation de données de santé</a></li>
+                  <li><a href="conception.html">Conception et évaluation des systèmes de santé</a></li>
+                  <li><a href="evaluation.html">Evaluation et certification des dispositifs médicaux</a></li>
                 </ul>
               </li>
 
               <li class="dropdown"><a href="developpement_durable.html"><span>Développement Durable</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="calender.html">Evaluation des impacts environnementaux et sociaux</a></li>
-                  <li><a href="calender.html">Conseil en matière des responsabilités sociétales des entreprises (RSE)</a></li>
-                  <li><a href="calender.html">Partenaires de mise en oeuvre et projets</a></li>
+                  <li><a href="Impacts.html">Evaluation des impacts environnementaux et sociaux</a></li>
+                  <li><a href="rse.html">Conseil en matière des responsabilités sociétales des entreprises (RSE)</a></li>
+                  <li><a href="partenaires.html">Partenaires de mise en oeuvre et projets</a></li>
                  
                 </ul>
               </li>
@@ -81,18 +81,18 @@
               <li><a href="mystery_shoping.html">Mystery Shoping</a></li>
 
 
-              <li class="dropdown"><a href="developpement_durable.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="L’excellence de l’expérience client.html"><span>Customer Experience Excellence</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="calender.html">International Customer Experience Standard</a></li>
-                  <li><a href="calender.html">International Digital Customer Experience Standard (IDCXS2022)
+                  <li><a href="Normes internationales en matière d’expérience client .html">International Customer Experience Standard</a></li>
+                  <li><a href="Normes internationales en matière d’expérience client sur les plateformes digitales .html">International Digital Customer Experience Standard (IDCXS2022)
                   </a></li>
-                  <li><a href="calender.html">International Employee Happiness and Wellbeing Standard (IEHWS2023)</a></li>
+                  <li><a href="Normes internationales de bonheur et de bien-être des salariés .html">International Employee Happiness and Wellbeing Standard (IEHWS2023)</a></li>
                  
                 </ul>
               </li>
 
 
-              <li><a href="securites_informatiques.html">Validation des systèmes informatisés (VSI)</a></li>
+              <li><a href="Validation des systèmes informatisés (VSI).html">Validation des systèmes informatisés (VSI)</a></li>
 
 
 
@@ -109,11 +109,11 @@
 
                <li class="dropdown"><a href="audit.html"><span>Audit</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="calender.html">Audit de marque</a></li>
-                  <li><a href="calender.html">Audit de genre</a></li>
-                  <li><a href="calender.html">Audit d'achat</a></li>
-                  <li><a href="calender.html">Audit des laboratoires</a></li>
-                  <li><a href="calender.html">Audit des bonnes pratiques de stockage <br>et de distribution des produits pharmaceutiques(GSDP)</a></li>
+                  <li><a href="audit_marque.html">Audit de marque</a></li>
+                  <li><a href="audit_genre.html">Audit de genre</a></li>
+                  <li><a href="audit_achat.html">Audit d'achat</a></li>
+                  <li><a href="audit_laboratoires.html">Audit des laboratoires</a></li>
+                  <li><a href="audit_bonnes_pratiques.html">Audit des bonnes pratiques de stockage <br>et de distribution des produits pharmaceutiques(GSDP)</a></li>
                 </ul>
               </li>
 
