--- a/L’excellence de l’expérience client.html
+++ b/L’excellence de l’expérience client.html
@@ -177,6 +177,19 @@
                               
                 
               </p>
+
+
+
+
+              <h4>Nos services:</h4>
+              <ul>
+                <li style="margin-left: 15px;"><a href="Normes internationales en matière d’expérience client .html">Normes internationales en matière d'expérience client</a></li>
+                <li style="margin-left: 15px;"><a href="Normes internationales en matière d’expérience client sur les plateformes digitales .html">Normes internationales en matière d'expérience client sur les plateformes digitales</a></li>
+                <li style="margin-left: 15px;"><a href="Normes internationales de bonheur et de bien-être des salariés .html">Normes internationales de bonheur et de bien-être des salariés</a></li>
+              </ul>
+
+
+
           </div>
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
