--- a/audit.html
+++ b/audit.html
@@ -181,10 +181,10 @@
               <h4>Nos Audits:</h4>
               <ul>
                 <li style="margin-left: 15px;"><a href="audit_marque.html">Audit de Marque</a></li>
-                <li style="margin-left: 15px;"><a href="">Audit de genre</a></li>
-                <li style="margin-left: 15px;"><a href="">Audit d'achat</a></li>
-                <li style="margin-left: 15px;"><a href="">Audit des laboratoires</a></li>
-                <li style="margin-left: 15px;"><a href="">Audit des bonnes pratiques de stockage et de distribution de produits pharmaceutiques (GSDP)</a></li>
+                <li style="margin-left: 15px;"><a href="audit_genre.html">Audit de genre</a></li>
+                <li style="margin-left: 15px;"><a href="audit_achat.html">Audit d'achat</a></li>
+                <li style="margin-left: 15px;"><a href="audit_laboratoires.html">Audit des laboratoires</a></li>
+                <li style="margin-left: 15px;"><a href="audit_bonnes_pratiques.html">Audit des bonnes pratiques de stockage et de distribution de produits pharmaceutiques (GSDP)</a></li>
               </ul>
           </div>
 
