--- a/developpement_durable.html
+++ b/developpement_durable.html
@@ -175,6 +175,18 @@
               
                 
               </p>
+
+
+
+              <h4>Nos services:</h4>
+              <ul>
+                <li style="margin-left: 15px;"><a href="evaluation.html">Evaluation des impacts environementaux et sociaux</a></li>
+                <li style="margin-left: 15px;"><a href="rse.html">Conseil en matière de responsabilité sociétale des entreprises</a></li>
+                <li style="margin-left: 15px;"><a href="partenaires.html">Partenaire de mise en oeuvre de projets</a></li>
+              </ul>
+
+
+
           </div>
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
