new images gims

--- a/developpement_durable.html
+++ b/developpement_durable.html
@@ -35,6 +35,26 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 
+
+
+  <style>
+
+.arrow {
+    width: 20px;
+    height: 20px;
+    border: solid #ccc;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 10px;
+    transform: rotate(135deg);
+    transition: border-color 0.3s, transform 0.3s;
+    cursor: pointer;
+}
+
+.arrow:hover {
+    border-color: #007BFF;
+    transform: rotate(135deg) scale(1.1);
+  </style>
 </head>
 
 <body class="index-page">
