--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 
+
+
+
+
+  <style>
+    .pic img {
+      width: 200%;
+      height: 500px; /* Set the desired height */
+      object-fit: cover; /* Ensures the image covers the specified area while maintaining aspect ratio */
+    }
+  </style>
 </head>
 
 <body class="index-page">
@@ -159,7 +170,7 @@
         <div class="row gy-4">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3>À propos de nous - BICOD SARL</h3>
-            <img src="assets/img/about.jpeg" class="img-fluid rounded-4 mb-4" alt="">
+            <img src="assets/img/about_fin.jpeg" class="img-fluid rounded-4 mb-4" alt="">
             <p>Bienvenue sur le site internet du Bureau International de Coopération au Développement SARL (BICOD SARL). Nous sommes une entreprise spécialisée dans la fourniture de services innovants et efficaces pour soutenir le développement durable et la croissance des organisations.</p>
             <!-- <p>Temporibus nihil enim deserunt sed ea. Provident sit expedita aut cupiditate nihil vitae quo officia vel. Blanditiis eligendi possimus et in cum. Quidem eos ut sint rem veniam qui. Ut ut repellendus nobis tempore doloribus debitis explicabo similique sit. Accusantium sed ut omnis beatae neque deleniti repellendus.</p> -->
             <h3>MISSION</h3>
@@ -325,7 +336,7 @@
                 <div class="icon">
                   <i class="bi bi-easel"></i>
                 </div>
-                <a href="securites_informatiques.html" class="stretched-link">
+                <a href="Validation des systèmes informatisés (VSI).html" class="stretched-link">
                   <h3>Validation des systèmes informatisés</h3>
                 </a>
                 <p>Gestion des risques , les processus operationnels, la securites informatiques, la conformite reglementation, audit participatif de genre. ISO 9001:2015 ; ISO 27001:2022 ; ISO 14001:2015</p>
@@ -343,10 +354,10 @@
                 <div class="icon">
                   <i class="bi bi-easel"></i>
                 </div>
-                <a href="conformite_reglementaire.html" class="stretched-link">
-                  <h3>Conformité Réglementaire</h3>
+                <a href="formation.html" class="stretched-link">
+                  <h3>Formation</h3>
                 </a>
-                <p>Validation des Systèmes Informatiques: Consultation en conformité réglemetaire; Formation et sensibilisation.</p>
+<p> Ici, vous aurez l'opportunité d'approfondir vos compétences dans des domaines clés où notre cabinet excelle, tels que l'ingénierie de la santé, le développement durable, l'expérience client entre autres.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -513,7 +524,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <div class="pic"><img src="assets/img/ceo.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/ceo_fin.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Marcel Ndongo</h4>
                 <span>CEO</span>
@@ -529,10 +540,10 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <div class="pic"><img src="assets/img/adolph.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/adolph_chair.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Adolph Nkoumou</h4>
-                <span>Directeur d'exploitation et Responsable Qualité et Conformité</span>
+                <span>Directeur d'exploitation et <br> Responsable Qualité et Conformité</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -548,7 +559,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="assets/img/secretaire.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/total_fin.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Patience Total</h4>
                 <span>Assistante</span>
@@ -566,7 +577,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="assets/img/benoit_minet.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/benoit_fin.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Benoît Minet</h4>
                 <span>Responsable Commercial</span>
@@ -583,7 +594,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="assets/img/jordan.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/jordan_fin.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Jordan Ladzou</h4>
                 <span>Responsable Commercial et Marketing</span>
